<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".controller.QuizListActivity">

    <TextView
        android:id="@+id/create_quiz_activity_manage_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="bottom|center"
        android:textColor="@color/teal_700"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/CreateQuizListActivity_ManageTextView_Label" />


    <EditText
        android:id="@+id/create_quiz_activity_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="bottom|center"
        android:textColor="@color/teal_700"
        android:textSize="32sp"
        android:textStyle="bold"
        android:hint="@string/CreateQuizListActivity_Name_Label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/create_quiz_activity_questions_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="bottom"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/CreateQuizListActivity_QuestionTextView_Label"/>

        <ImageButton
            android:id="@+id/create_quiz_activity_add_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/QuizListActivity_AddBtn_Label"
            android:scaleType="fitXY"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/create_quiz_activity_linear_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

    </ScrollView>
    <Button
        android:id="@+id/create_quiz_activity_button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/CreateQuizListActivity_CreateBtn_Label" />

</LinearLayout>