<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".controller.QuizListActivity">

    <TextView
        android:id="@+id/quiz_list_activity_main_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/QuizListActivity_MainTextView_Label"
        android:textSize="64sp" />

    <Button
        android:id="@+id/quiz_list_activity_create_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/QuizListActivity_CreateBtn_Label" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/QuizListActivity_ScrollViewContentDescription_Label">

        <LinearLayout
            android:id="@+id/quiz_list_linear_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </ScrollView>

</LinearLayout>