<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CreateGapSentenceActivity"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp">

    <EditText
        android:id="@+id/gap_sentence_activity_sentance_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CreateGapSentenceActivity_EditText_Label"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/binding_create_activity_gap_sentence_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/CreateGapSentenceActivity_TextView_Label"
        />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:ignore="ExtraText">
        android:layout_marginBottom="16dp"
        <LinearLayout
            android:id="@+id/binding_create_activity_linear_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/binding_create_activity_gap_sentence_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text=""
        />

    <Button
        android:id="@+id/binding_create_activity_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/CreateGapSentenceActivity_OkBtn_Label" />

</LinearLayout>
