<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp">

    <TextView
        android:id="@+id/main_text_view_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="Hello World!"
        />

    <EditText
        android:id="@+id/main_edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/MainActivity_MainEditTextName_Hint"
        />

    <Button
        android:id="@+id/main_button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/MainActivity_MainButtonPlay_Text" />

    <Button
        android:id="@+id/main_button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/MainActivity_ButtonCreate_Text" />

    <Button
        android:id="@+id/main_button_create_binding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="Create binding" />

    <Button
        android:id="@+id/main_button_play_binding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="Play binding" />

    <Button
        android:id="@+id/main_button_create_gap_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="Create gap sentence" />

    <Button
        android:id="@+id/main_button_quizz_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="Get quizz list" />

</LinearLayout>
